www.silipint.com/public/css/home.css
.unbreakable-bar {
	width:100%;
	height:92px;
	background-color:rgba(0,0,0,0.5);
	padding-right:150px;
	position:relative;
	top:-92px;
	margin-bottom:-92px;
}
.unbreakable-bar .text {
	color:#fff;
	text-transform:uppercase;
	text-align:right;
	font-weight:600;
	position:relative;
	top:40px;
	font-size:15px;
}
.unbreakable-bar .arrow {
	width:90px;
	height:102px;
	background-image:url(//d1niwwqaddyuw4.cloudfront.net/img/stick-arrow.png);
	position:absolute;
	top:0;
	right:0;
	cursor:pointer;
}
.boxes1 {
	background-color:#00aeef;
	margin-left:-1px;
	margin-right:-1px;
}
.boxes1 .box {
	width:33.33333%;
	float:left;
	border-left:1px solid #fff;
}
.boxes1 .box .img {
	height:auto;
	width:100%;
	background-repeat:no-repeat;
	background-size:cover;
	background-position:center center;
}
.boxes1 .box .img img {
	width:100%;
	height:auto;
}
.boxes1 .box .text {
	height:102px;
	border-top:1px solid #fff;
	color:#fff;
	font-size:20px;
	text-align:right;
	padding-top:35px;
	padding-right:20%;
	display:block;
	background-repeat:no-repeat;
	background-position:90% center;
	background-image:url(//d1niwwqaddyuw4.cloudfront.net/img/sili-arrow-right.png?v2);
}
.carousel-caption {
	padding-bottom:0;
	left:auto;
	font-size:20px;
	right:30%;
	height: auto;
	line-height: 57px;
	color:#efefef;
}

.inline-caption {
	display: inline-block;
	vertical-align: middle;
	line-height: normal;
	}


.carousel-indicators {
	left:auto;
	right:19%;
	width:auto;
	text-align:left;
	bottom:23px;
}
.carousel-indicators li {
	width:15px; height:15px;
	border-radius:15px;
	margin:0 1px;
	padding:0;
	border:1px solid #fff;
}
.carousel-indicators li.active {
	width:15px; height:15px;
	border-radius:15px;
	margin:0 1px;
	padding:0;
	border:1px solid #fff;
	background-color:#ffba11;
	border-color:#ffba11;
}
.carousel-inner>.item>img,.carousel-inner>.item>a>img { width:100%;max-width:auto; }
@media (max-width:768px) {
	.unbreakable-bar {
		width:100%;
		height:auto;
		background-color:rgba(0,0,0,0.5);
		padding-right:0;
		top:auto;
		margin-bottom:0;
		border-bottom:2px solid #ccc;
		margin-top:0;
	}
	.unbreakable-bar .text {
		color:#777;
		font-weight:200;
		position:relative;
		top:0;
		font-size:18px;
		padding:50px 20px;
		text-align:center;
		text-transform:inherit;
	}
	.unbreakable-bar .arrow {
		display:none;
	}
	.carousel-inner {
		overflow:visible;
	}
	.carousel-caption {
		display:block;
		width:100%;
		top:100%;
		bottom:auto;
		color:#fff;
		background-color:rgba(0,0,0,0.5);
		border-bottom:2px solid #ccc;
		left:0;
		padding:20px;
		text-shadow:none;
		font-size:16px;
		margin:0;
	}
}
@media (max-width:768px) {
	.boxes1 .box {
		width:100%;
		border-left:none;
		border-right:none;
	}
	.carousel-caption {
	}
	.carousel-indicators {
		bottom:0;
		right:auto;
		left:50%;
		text-align:center;
		margin-left:-10%;
	}
}

